# eddy_v2

./: .clang-format  .gitignore  CMakeLists.txt  CodeOfConduct.md  Contributing.md  LICENSE  README.md  config.h.in  test.txt
base/: CMakeLists.txt  allocate.h  da.h  error_or.h  errorcode.c  fmt.h  fn.h  fs.c  fs.h  hash.c  hash.h  hm.c  hm.h  http.c  http.h  integer.h  io.c  io.h  json.c  json.h  lexer.c  lexer.h  log.c  log.h  mem.h  mutex.c  optional.h  options.h  pipe.c  pipe.h  process.c  process.h  resolve.h  sl.c  sv.c  sv.h  token.c  token.h  xml.c  xml.h
base/test/: clang-format.c  http_server.c  lsp-initialize-response.json  lsp-publish-diagnostics-request.json
eddy/: CMakeLists.txt
eddy/etc/syntax/: Bibtex.tmLanguage.json  LaTeX.tmLanguage.json  TeX.tmLanguage.json  basic-wat.tmLanguage.json  cpp-grammar-bailout.tmLanguage.json  cshtml.tmLanguage.json  dart.tmLanguage.json  go.tmLanguage.json  julia.tmLanguage.json  less.tmLanguage.json  lua.tmLanguage.json  markdown-latex-combined.tmLanguage.json  markdown.tmLanguage.json  rust.tmLanguage.json  shell-unix-bash.tmLanguage.json
eddy/share/: settings.json
eddy/src/app/: CMakeLists.txt  app.c  buffer.c  buffer.h  c.c  c.h  cmake.h  eddy.c  eddy.h  editor.c  editor.h  event.h  listbox.c  listbox.h  main.c  minibuffer.h  mode.c  mode.h  scribble.c  scribble.h  theme.c  theme.h  widget.h
eddy/src/lsp/: CMakeLists.txt  lsp.c  lsp.h
eddy/src/template/: CMakeLists.txt  lexer.c  parser.c  render.c  serialize.c  template.c  template.h
eddy/src/template/test/: CMakeLists.txt  bool.json  for.json  for_do.json  for_nested_if.json  for_where.json  for_where_do.json  function.json  helloworld.json  if.json  if_else.json  macro.json  paren.json  ref.json  switch_no_expr.json  template_test.c  tests.json  unary.json
lsp/: lsp.c  lsp.h
lsp/schema/: AnnotatedTextEdit.c  ChangeAnnotation.c  ChangeAnnotationIdentifier.h  CodeDescription.h  Command.h  CompletionItemKind.c  CompletionItemLabelDetails.h  CompletionItemTag.h  CompletionList.c  CompletionTriggerKind.c  Diagnostic.c  DiagnosticRelatedInformation.c  DiagnosticRelatedInformation.h  DiagnosticSeverity.c  DidChangeTextDocumentParams.c  DidChangeTextDocumentParams.h  DidOpenTextDocumentParams.h  DocumentFormattingParams.h  DocumentRangeFormattingParams.c  DocumentUri.c  FormattingOptions.c  InitializeResult.c  LSPCommand.h  LocationLink.c  LocationLink.h  MarkupKind.h  Position.c  PositionEncodingKind.c  PublishDiagnosticsClientCapabilities.h  PublishDiagnosticsParams.c  PublishDiagnosticsParams.h  Range.h  RegularExpressionsClientCapabilities.c  SaveOptions.c  SemanticTokenModifiers.c  SemanticTokenTypes.c  SemanticTokens.h  SemanticTokensLegend.c  SemanticTokensOptions.c  ServerCapabilities.c  (+9 more)
lsp/ts/: parse.c  serialize.c  ts.c
scribble/: CMakeLists.txt
scribble/rt/: CMakeLists.txt
scribble/rt/arch/Darwin/arm64/: putln.s  write.s
scribble/share/: std.scribble
scribble/src/: CMakeLists.txt
scribble/src/scribble/: CMakeLists.txt  backend.c  backend_main.c  binder.c  binder.h  datum.c  datum.h  engine.h  execute.c  execute.h  frontend.c  frontend_main.c  graph.c  intermediate.c  intermediate.h  ir.c  ir.h  native.c  native.h  parser.c  parser.h  type.c  type.h
scribble/src/scribble/model/: error.c  error.h  op.c  op.h  syntaxnode.c  syntaxnode.h
scribble/test/: CMakeLists.txt
scribble/test/not_yet_working/: async.scribble  queryfile.scribble
scribble/test/scribble/: argv  array  array.scribble  boolean  boolean.scribble  cast  cast.scribble  enum  for  pointer  precedence  static_message  string_ternary  string_ternary.scribble  subtract
share/: settings.json
src/app/: CMakeLists.txt  app.c  buffer.c  buffer.h  c.c  c.h  cmake.c  cmake.h  command.c  command.h  document.c  document.h  eddy.c  eddy.h  editor.c  editor.h  listbox.c  listbox.h  main.c  minibuffer.c  minibuffer.h  palette.c  palette.h  scribble.c  scribble.h  text.c  text.h  theme.c  theme.h  widget.c  widget.h
src/base/: CMakeLists.txt  allocate.h  da.c  da.h  error_or.c  error_or.h  errorcode.c  errorcode.h  fs.c  fs.h  http.c  io.c  io.h  json.c  json.h  lexer.c  lexer.h  log.c  log.h  mem.c  mem.h  mutex.c  mutex.h  optional.h  process.c  process.h  resolve.c  sb.c  sl.c  ss.c  sv.c  sv.h  template.c  template.h  token.c  token.h  xml.c  xml.h
src/base/test/: CMakeLists.txt  clang-format.c  http_server.c  render.json  render.template
src/lang/: CMakeLists.txt  c.c  c.h  scribble.c  ts.c  ts.h
src/lsp/: CMakeLists.txt  base.c  base.h  base.json  generate_c.py  initialize.c  initialize.h  initialize.json  language.c  language.h  language.json  lsp.c  lsp.h  lsp_base.c  lsp_base.h  semantictokens.c  semantictokens.h  semantictokens.json  synchronization.c  synchronization.h  synchronization.json
src/lsp/schema/: AnnotatedTextEdit.c  AnnotatedTextEdit.h  CMakeLists.txt  CMakeLists.txt.in  ChangeAnnotation.c  ChangeAnnotation.h  ChangeAnnotationIdentifier.c  ChangeAnnotationIdentifier.h  ClientCapabilities.c  ClientCapabilities.h  CodeDescription.c  Command.c  CompletionContext.c  CompletionItem.c  CompletionItem.h  CompletionItemKind.c  CompletionItemLabelDetails.c  CompletionItemTag.c  CompletionList.c  CompletionParams.c  CompletionParams.h  CompletionTriggerKind.c  CompletionTriggerKind.h  Diagnostic.c  Diagnostic.h  DiagnosticRelatedInformation.c  DiagnosticSeverity.c  DiagnosticTag.c  DidChangeTextDocumentParams.c  DidChangeTextDocumentParams.h  DidCloseTextDocumentParams.c  DidCloseTextDocumentParams.h  DidOpenTextDocumentParams.c  DidOpenTextDocumentParams.h  DidSaveTextDocumentParams.c  DocumentFilter.c  (+96 more)
src/lsp/ts/: CMakeLists.txt  generate.c  parse.c  serialize.c  tostring.c  ts.c  ts.h
src/template/: CMakeLists.txt  lexer.c  parser.c  render.c  serialize.c  template.c  template.h
src/template/test/: add.json  for.json  render.json  render.template  render_for_do.template  render_function.template  render_ref.template  render_streq.template  render_unary.template  streq.json  switch.json  template_test.c  tests.json
src/widget/: widget.c  widget.h
(+82 files in other folders)
